--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
     <link rel="stylesheet" href="assets/styles/main.css">
 </head>
 <body>
-    <h1>Hello</h1>
+    <header>
+        <div class="container flex">
+            <div class="logo">
+                <a href="index.html" class="i-flex">
+                    <img src="assets/icons/logo-dark.webp" alt="Logo Icon">
+                    <span>ROLEX</span>
+                </a>
+            </div>
+            <nav>
+                <ul id="menu" class="menu-toggle">
+                    <li class="close-menu"><img src="assets/icons/close-dark.webp" id="close-icon"  class="close-icon" alt="Close Icon"></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#featured">Featured</a></li>
+                    <li><a href="#products">Products</a></li>
+                    <li><a href="#new">New</a></li>
+                </ul>
+                <img src="assets/icons/moon-darkmode.webp" id="theme-icon" class="theme-icon" alt="Theme Icon">
+                <img src="assets/icons/cart-dark.webp" id="cart-icon" class="cart-icon" alt="Cart Icon">
+                <img src="assets/icons/menu.webp" id="menu-icon" class="menu-icon" alt="Menu Icon">
+            </nav>
+        </div>
+    </header>
     <script src="assets/scripts/main.js"></script>
 </body>
 </html>
