--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
             <nav>
                 <ul id="menu" class="menu-toggle">
                     <li class="close-menu"><img src="assets/icons/close-dark.webp" id="close-icon"  class="close-icon" alt="Close Icon"></li>
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="#home" class="active">Home</a></li>
                     <li><a href="#featured">Featured</a></li>
                     <li><a href="#products">Products</a></li>
                     <li><a href="#new">New</a></li>
                 </ul>
+                <div class="icons i-flex">
                 <img src="assets/icons/moon-darkmode.webp" id="theme-icon" class="theme-icon" alt="Theme Icon">
                 <img src="assets/icons/cart-dark.webp" id="cart-icon" class="cart-icon" alt="Cart Icon">
                 <img src="assets/icons/menu.webp" id="menu-icon" class="menu-icon" alt="Menu Icon">
+                </div>
             </nav>
         </div>
     </header>
