Add: Header Functionality To Add And Remove Menu List & Add: Convert Between The DarkMode And The LightMode

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
         <div class="container flex">
             <div class="logo">
                 <a href="index.html" class="i-flex">
-                    <img src="assets/icons/logo-dark.webp" alt="Logo Icon">
+                    <img src="assets/icons/logo-dark.webp" id="logo-icon" alt="Logo Icon">
                     <span>ROLEX</span>
                 </a>
             </div>
             <nav>
-                <ul id="menu" class="menu-toggle">
+                <ul id="menu">
                     <li class="close-menu"><img src="assets/icons/close-dark.webp" id="close-icon"  class="close-icon" alt="Close Icon"></li>
-                    <li><a href="#home" class="active">Home</a></li>
-                    <li><a href="#featured">Featured</a></li>
-                    <li><a href="#products">Products</a></li>
-                    <li><a href="#new">New</a></li>
+                    <li><a href="#home" class="menu-link active">Home</a></li>
+                    <li><a href="#featured" class="menu-link">Featured</a></li>
+                    <li><a href="#products" class="menu-link">Products</a></li>
+                    <li><a href="#new" class="menu-link">New</a></li>
                 </ul>
                 <div class="icons i-flex">
                 <img src="assets/icons/moon-darkmode.webp" id="theme-icon" class="theme-icon" alt="Theme Icon">
