--- a/index.html
+++ b/index.html
@@ -34,6 +34,29 @@
             </nav>
         </div>
     </header>
+    <main>
+        <section class="home" id="home">
+            <div class="container">
+                <!-- <div class="social-links">
+                    <a href="#">Facebook</a>
+                    <a href="#">Twitter</a>
+                    <a href="#">Instagram</a>
+                </div> -->
+                <article class="article flex">
+                    <h1 class="title">NEW WATCH <br/> COLLECTIONS B720</h1>
+                    <p class="description">Latest arrival of the new imported watches of the B720 series, with a modern and resistant design.</p>
+                    <span class="price">$1245</span>
+                    <div class="home-btns i-flex">
+                        <a href="" class="discover">Discover</a>
+                        <button type="button" class="cart-btn">ADD TO CART</button>
+                    </div>
+                </article>
+                <div class="home-image product-image">
+                    <img src="assets/images/home .webp" alt="Product Image">
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="assets/scripts/main.js"></script>
 </body>
 </html>
