Add: Home Section Style

--- a/index.html
+++ b/index.html
@@ -36,22 +36,17 @@
     </header>
     <main>
         <section class="home" id="home">
-            <div class="container">
-                <!-- <div class="social-links">
-                    <a href="#">Facebook</a>
-                    <a href="#">Twitter</a>
-                    <a href="#">Instagram</a>
-                </div> -->
-                <article class="article flex">
+            <div class="container flex">
+                <article class="article col flex ">
                     <h1 class="title">NEW WATCH <br/> COLLECTIONS B720</h1>
                     <p class="description">Latest arrival of the new imported watches of the B720 series, with a modern and resistant design.</p>
                     <span class="price">$1245</span>
                     <div class="home-btns i-flex">
-                        <a href="" class="discover">Discover</a>
+                        <a href="#" class="discover">Discover</a>
                         <button type="button" class="cart-btn">ADD TO CART</button>
                     </div>
                 </article>
-                <div class="home-image product-image">
+                <div class="home-image product-image col">
                     <img src="assets/images/home .webp" alt="Product Image">
                 </div>
             </div>
