Update: Header Style Icons Background Color

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                     <li><a href="#new" class="menu-link">New</a></li>
                 </ul>
                 <div class="icons i-flex">
-                <img src="assets/icons/moon-darkmode.webp" id="theme-icon" class="theme-icon" alt="Theme Icon">
-                <img src="assets/icons/cart-dark.webp" id="cart-icon" class="cart-icon" alt="Cart Icon">
-                <img src="assets/icons/menu.webp" id="menu-icon" class="menu-icon" alt="Menu Icon">
+                <div><img src="assets/icons/moon-darkmode.webp" id="theme-icon" class="theme-icon" alt="Theme Icon"></div>
+                <div><img src="assets/icons/cart-dark.webp" id="cart-icon" class="cart-icon" alt="Cart Icon"></div>
+                <div class="menu-icon-box"><img src="assets/icons/menu.webp" id="menu-icon" class="menu-icon" alt="Menu Icon"></div>
                 </div>
             </nav>
         </div>
