--- a/index.html
+++ b/index.html
@@ -51,6 +51,34 @@
                 </div>
             </div>
         </section>
+        <section class="featured" id="featured">
+            <div class="container">
+                <h2 class="title overline text-center row">FEATURED</h2>
+                <div class="featured-list row grid">
+                    <div class=" featured-item col flex-column">
+                        <span class="sale-title">SALE</span>
+                        <div class="image-box"><img src="assets/images/featured-image-1.webp" alt="Watch Image"></div>
+                        <span class="span.product-name">JAZZMASTER</span>
+                        <span class="product-price">$1050</span>
+                        <button class="cart-btn">ADD TO CART</button>
+                    </div>
+                    <div class=" featured-item col flex-column">
+                        <span class="sale-title">SALE</span>
+                        <div class="image-box"><img src="assets/images/featured-image-2.webp" alt="Watch Image"></div>
+                        <span class="span.product-name">INGERSOLL</span>
+                        <span class="product-price">$250</span>
+                        <button class="cart-btn">ADD TO CART</button>
+                    </div>
+                    <div class=" featured-item col flex-column">
+                        <span class="sale-title">SALE</span>
+                        <div class="image-box"><img src="assets/images/featured-image-3.webp" alt="Watch Image"></div>
+                        <span class="span.product-name">ROSE GOLD</span>
+                        <span class="product-price">$890</span>
+                        <button class="cart-btn">ADD TO CART</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="assets/scripts/main.js"></script>
 </body>
