Add: Featured Section Style

--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
                     <div class=" featured-item col flex-column">
                         <span class="sale-title">SALE</span>
                         <div class="image-box"><img src="assets/images/featured-image-1.webp" alt="Watch Image"></div>
-                        <span class="span.product-name">JAZZMASTER</span>
+                        <span class="product-name">JAZZMASTER</span>
                         <span class="product-price">$1050</span>
                         <button class="cart-btn">ADD TO CART</button>
                     </div>
                     <div class=" featured-item col flex-column">
                         <span class="sale-title">SALE</span>
                         <div class="image-box"><img src="assets/images/featured-image-2.webp" alt="Watch Image"></div>
-                        <span class="span.product-name">INGERSOLL</span>
+                        <span class="product-name">INGERSOLL</span>
                         <span class="product-price">$250</span>
                         <button class="cart-btn">ADD TO CART</button>
                     </div>
                     <div class=" featured-item col flex-column">
                         <span class="sale-title">SALE</span>
                         <div class="image-box"><img src="assets/images/featured-image-3.webp" alt="Watch Image"></div>
-                        <span class="span.product-name">ROSE GOLD</span>
+                        <span class="product-name">ROSE GOLD</span>
                         <span class="product-price">$890</span>
                         <button class="cart-btn">ADD TO CART</button>
                     </div>
