Add: Our Story Section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,19 @@
                 </div>
             </div>
         </section>
+        <section class="our-story" id="our-story">
+            <div class="container row grid">
+                <div class="image col">
+                    <img src="assets/images/our-story .webp" alt="Watch Image">
+                </div>
+                <article class="article col flex">
+                    <h2 class="title overline">OUR STORY</h2>
+                    <h3 class="title">Inspirational Watch of <br/> this year</h3>
+                    <p class="description">The latest and modern watches of this year, is available in various presentations in this store, discover them now.</p>
+                    <a href="#" class="discover cart-btn">Discover</a>
+                </article>
+            </div>
+        </section>
     </main>
     <script src="assets/scripts/main.js"></script>
 </body>
