Add: Our Story Section Style

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
         </section>
         <section class="our-story" id="our-story">
-            <div class="container row grid">
+            <div class="container row flex">
                 <div class="image col">
                     <img src="assets/images/our-story .webp" alt="Watch Image">
                 </div>
