Add: Products Section

--- a/index.html
+++ b/index.html
@@ -92,6 +92,43 @@
                 </article>
             </div>
         </section>
+        <section class="products" id="products">
+            <div class="container">
+                <h2 class="title overline text-center row">PRODUCTS</h2>
+                <div class="products-list row grid">
+                    <div class=" products-item col flex-column">
+                        <div class="image-box"><img src="assets/images/product-image-1.webp" alt="Watch Image"></div>
+                        <span class="product-name">SPIRT ROSE</span>
+                        <span class="product-price">$1500</span>
+                        <button class="special-cart-btn"><img src="assets/icons/cart-light.webp" alt="Cart Icon"></button>
+                    </div>
+                    <div class=" products-item col flex-column">
+                        <div class="image-box"><img src="assets/images/product-image-2.webp" alt="Watch Image"></div>
+                        <span class="product-name">KHAKI PILOT</span>
+                        <span class="product-price">$1350</span>
+                        <button class="special-cart-btn"><img src="assets/icons/cart-light.webp" alt="Cart Icon"></button>
+                    </div>
+                    <div class=" products-item col flex-column">
+                        <div class="image-box"><img src="assets/images/product-image-3.webp" alt="Watch Image"></div>
+                        <span class="product-name">JUBILEE BLACK</span>
+                        <span class="product-price">$870</span>
+                        <button class="special-cart-btn"><img src="assets/icons/cart-light.webp" alt="Cart Icon"></button>
+                    </div>
+                    <div class=" products-item col flex-column">
+                        <div class="image-box"><img src="assets/images/product-image-4.webp" alt="Watch Image"></div>
+                        <span class="product-name">FOSIL ME3</span>
+                        <span class="product-price">$650</span>
+                        <button class="special-cart-btn"><img src="assets/icons/cart-light.webp" alt="Cart Icon"></button>
+                    </div>
+                    <div class=" products-item col flex-column">
+                        <div class="image-box"><img src="assets/images/product-image-4.webp" alt="Watch Image"></div>
+                        <span class="product-name">DUCHEN</span>
+                        <span class="product-price">$950</span>
+                        <button class="special-cart-btn"><img src="assets/icons/cart-light.webp" alt="Cart Icon"></button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="assets/scripts/main.js"></script>
 </body>
