--- a/index.html
+++ b/index.html
@@ -129,6 +129,29 @@
                 </div>
             </div>
         </section>
+        <section class="testimonials" id="testimonials">
+            <div class="container row flex">
+                <article class="article col flex">
+                    <div class="quote"><img src="assets/icons/quote.webp" alt="Quote Icon"></div>
+                    <p class="description">The latest and modern watches of this year, is available in various presentations in this store, discover them now.</p>
+                    <span class="date">March 27.2021</span>
+                    <div class="person-info flex">
+                        <div class="image-box"><img src="assets/images/testimonial-person-1.webp" alt="Person Image"></div>
+                        <div class="details flex">
+                            <span class="person-name">Lee Doe</span>
+                            <span class="job">Director of a company</span>
+                        </div>
+                    </div>
+                    <div class="slider-btns flex">
+                        <div class="previous-btn"><img src="assets/icons/arrow-left.webp" alt="Arrow Left"></div>
+                        <div class="next-btn"><img src="assets/icons/arrow-right.webp" alt="Arrow Right"></div>
+                    </div>
+                </article>
+                <div class="image col">
+                    <img src="assets/images/testimonial-image.webp" alt="Watch Image">
+                </div>
+            </div>
+        </section>
     </main>
     <script src="assets/scripts/main.js"></script>
 </body>
