Add: Testimonials Section Style

--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
                     <span class="date">March 27.2021</span>
                     <div class="person-info flex">
                         <div class="image-box"><img src="assets/images/testimonial-person-1.webp" alt="Person Image"></div>
-                        <div class="details flex">
+                        <div class="details">
                             <span class="person-name">Lee Doe</span>
                             <span class="job">Director of a company</span>
                         </div>
                     </div>
                     <div class="slider-btns flex">
-                        <div class="previous-btn"><img src="assets/icons/arrow-left.webp" alt="Arrow Left"></div>
-                        <div class="next-btn"><img src="assets/icons/arrow-right.webp" alt="Arrow Right"></div>
+                        <div class="previous-btn i-flex"><img src="assets/icons/arrow-left.webp" alt="Arrow Left"></div>
+                        <div class="next-btn i-flex"><img src="assets/icons/arrow-right.webp" alt="Arrow Right"></div>
                     </div>
                 </article>
                 <div class="image col">
