Add: New Arrivals Section

--- a/index.html
+++ b/index.html
@@ -152,6 +152,41 @@
                 </div>
             </div>
         </section>
+        <section class="new-arrivals" id="new">
+            <div class="container">
+                <h2 class="title overline text-center row">NEW ARRIVALS</h2>
+                <div class="Products-list row grid">
+                    <div class=" Product-item col flex-column">
+                        <span class="sale-title">NEW</span>
+                        <div class="image-box"><img src="assets/images/new-product-1.webp" alt="Watch Image"></div>
+                        <span class="product-name">LONGINES ROSE</span>
+                        <span class="product-price">$980</span>
+                        <button class="cart-btn">ADD TO CART</button>
+                    </div>
+                    <div class=" Product-item col flex-column">
+                        <span class="sale-title">NEW</span>
+                        <div class="image-box"><img src="assets/images/new-product-2.webp" alt="Watch Image"></div>
+                        <span class="product-name">JAZZMASTER</span>
+                        <span class="product-price">$1150</span>
+                        <button class="cart-btn">ADD TO CART</button>
+                    </div>
+                    <div class=" Product-item col flex-column">
+                        <span class="sale-title">NEW</span>
+                        <div class="image-box"><img src="assets/images/new-product-3.webp" alt="Watch Image"></div>
+                        <span class="product-name">DREYFUSS GOLD</span>
+                        <span class="product-price">$750</span>
+                        <button class="cart-btn">ADD TO CART</button>
+                    </div>
+                    <div class=" Product-item col flex-column">
+                        <span class="sale-title">NEW</span>
+                        <div class="image-box"><img src="assets/images/new-product-4.webp" alt="Watch Image"></div>
+                        <span class="product-name">PORTUGUESE ROSE</span>
+                        <span class="product-price">$1590</span>
+                        <button class="cart-btn">ADD TO CART</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="assets/scripts/main.js"></script>
 </body>
