Add: Subscribe Section Style

--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@
         </section>
         <section class="subscribe">
             <div class="container row grid">
-                <div class="info col">
+                <div class="info col flex">
                     <h2>Subscribe Our <br/>Newsletter</h2>
                     <p class="description">Don't miss out on your discounts. Subscribe to our email newsletter to get the best offers, discounts, coupons, gifts and much more.</p>
                 </div>
                 <div class="form-box col">
-                    <form method="post">
+                    <form method="post" class="flex">
                         <input type="email" name="email" placeholder="Enter your email">
                         <input class="subscribe-btn" type="submit" value="SUBSCRIBE">
                     </form>
