Add: Footer Links Section

--- a/index.html
+++ b/index.html
@@ -202,6 +202,46 @@
             </div>
         </section>
     </main>
+    <footer>
+        <section class="footer-up">
+            <div class="container row grid">
+                <div class="col">
+                    <span class="links-title">Our information</span>
+                    <ul>
+                        <li><a href="#">1234 - Peru</a></li>
+                        <li><a href="#">La Libertad 43210</a></li>
+                        <li><a href="#">123-456-789</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <span class="links-title">About Us</span>
+                    <ul>
+                        <li><a href="#">Support Center</a></li>
+                        <li><a href="#">Customer Support</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Copy Right</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <span class="links-title">Product</span>
+                    <ul>
+                        <li><a href="#">Road bikes</a></li>
+                        <li><a href="#">Mountain bikes</a></li>
+                        <li><a href="#">Electric</a></li>
+                        <li><a href="#">Accesories</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <span class="links-title">Social</span>
+                    <ul>
+                        <li><a href="#"><img src="assets/icons/facebook-dark.webp" alt=""></a></li>
+                        <li><a href="#"><img src="assets/icons/twitter-dark.webp" alt=""></a></li>
+                        <li><a href="#"><img src="assets/icons/instagram-dark.webp" alt=""></a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </footer>
     <script src="assets/scripts/main.js"></script>
 </body>
 </html>
