--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 </div>
                 <div class="col">
                     <span class="links-title">Social</span>
-                    <ul>
+                    <ul class="social-links ">
                         <li><a href="#"><img src="assets/icons/facebook-dark.webp" alt=""></a></li>
                         <li><a href="#"><img src="assets/icons/twitter-dark.webp" alt=""></a></li>
                         <li><a href="#"><img src="assets/icons/instagram-dark.webp" alt=""></a></li>
