Add: Footer Copyrights Section

--- a/index.html
+++ b/index.html
@@ -241,6 +241,11 @@
                 </div>
             </div>
         </section>
+        <section class="copyrights">
+            <div class="container">
+                <p class="description text-center">&copy;Bedimcode. All rigths reserved</p>
+            </div>
+        </section>
     </footer>
     <script src="assets/scripts/main.js"></script>
 </body>
